# langchain-academy-sandbox

./: .env.example  README.md  pyproject.toml
courses/langchain-python-essentials/scratch/: call_openai_api.py
courses/quick-start/: documentation.md
courses/quick-start/overview-create-agent/: create_agent.py
courses/quick-start/weather-agent/: agent.py
